<package format="3">
  <name>autoware_vehicle_msgs</name>
  <version>0.0.1</version>
  <description>Autoware custom vehicle messages package for ROS2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Buildtool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Package dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autoware_control_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- Dependencies needed for the message generation -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
